--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-fetch": "^3.1.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "file-type": "^17.1.1",
@@ -21,6 +22,8 @@
     "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
-    "mongoose": "^6.1.2"
+    "mongoose": "^6.1.2",
+    "node-fetch": "^2.6.7",
+    "request": "^2.88.2"
   }
 }
