--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "mongoose": "^6.1.2",
     "node-fetch": "^2.6.7",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
