--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cross-fetch": "^3.1.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fast-geoip": "^1.1.62",
     "file-type": "^17.1.1",
     "firebase-admin": "^10.0.2",
     "helmet": "^5.0.1",
