--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.1.2",
     "node-fetch": "^2.6.7",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
