--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devStart": "nodemon server.js",
     "devStartAuth": "nodemon authServer.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "npm install pm2 -g",
     "start": "pm2-runtime start ecosystem.config.js --env production"
   },
   "keywords": [],
