--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.3",
     "mongoose": "^6.1.2",
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.5",
