--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
     "dotenv": "^10.0.0",
+    "encoding": "^0.1.13",
     "express": "^4.17.1",
     "fast-geoip": "^1.1.62",
     "file-type": "^17.1.3",
