--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,15 @@
 {
   "compilerOptions": {
-    "baseUrl": "app"
+    "outDir": "./app/",
+    "sourceMap": true,
+    "strict": true,
+
+    "module": "commonjs",
+    "target": "es6",
+    "allowJs": true
   },
-  "include": ["app"]
+  "exclude": ["node_modules", "**/*.test.js", "**/*.test.jsx"],
+  "files": ["./server.js"],
+  "include": ["./app/**/*"],
+  "index": "./server.js"
 }
