--- a/package.json
+++ b/package.json
@@ -20,19 +20,25 @@
     "express": "^4.17.1",
     "fast-geoip": "^1.1.62",
     "file-type": "^17.1.3",
-    "firebase-admin": "^10.0.2",
+    "firebase": "^9.15.0",
+    "firebase-admin": "^10.3.0",
+    "firebase-functions": "^4.1.1",
     "helmet": "^5.0.1",
     "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "mongoose": "^6.4.6",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.5",
     "request": "^2.88.2",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@types/node": "^18.11.18",
+    "nodemon": "^2.0.15",
+    "typescript": "^4.9.4"
   }
 }
