--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devStart": "nodemon server.js",
     "devStartAuth": "nodemon authServer.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "npm install pm2 -g",
     "start": "pm2-runtime start ecosystem.config.js --env production"
   },
   "keywords": [],
@@ -17,7 +18,6 @@
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
     "dotenv": "^10.0.0",
-    "draft-js-export-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
     "express": "^4.17.1",
     "fast-geoip": "^1.1.62",
