--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nodemailer": "^6.7.5",
     "request": "^2.88.2",
     "socket.io": "^4.4.1",
+    "stripe": "^11.14.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
